# artifactd

./: .gitignore  README.md  pyproject.toml
.artifactd-roadmaps/: artifactd-next-layer.html
cloudflare/: artifacts.example.yml  artifacts.yml  echo-artifacts.yml
launchd/: com.skylar.artifactd-tunnel.plist  com.skylar.artifactd.plist  com.skylar.echo-artifactd-tunnel.plist  com.skylar.echo-artifactd.plist
scripts/: agent_health_dashboard.py  google_auth_repair_center.py  install-echo-launchdaemons.sh  install-launchagents.sh  install-launchdaemons.sh  project_dashboard_generator.py
src/artifactd/: __init__.py  actions.py  cli.py  embeds.py  hermes_plugin.py  hermes_plugin_installer.py  interactive.py  security.py  server.py  state.py  store.py  workspaces.py
tests/: test_actions.py  test_agent_health_dashboard.py  test_cli.py  test_hermes_plugin_install.py  test_project_dashboard_generator.py  test_server.py  test_store_security.py  test_workspaces.py
