[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artifactd"
version = "0.1.0"
description = "Hermes artifact/workspace runtime for generated agent Things."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "typer>=0.12",
  "python-multipart>=0.0.9",
  "PyYAML>=6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27"
]

[project.scripts]
artifactd = "artifactd.cli:app"

[project.entry-points."hermes_agent.plugins"]
artifactd_workspaces = "artifactd.hermes_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
